2002-12-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclStubInit.c: regen
	* generic/tclIntPlatDecls.h: regen
	* generic/tclInt.decls: added TclWinResetInterface

	* win/tclWin32Dll.c (TclWinResetInterfaces):
	* win/tclWinInit.c (TclpSetInitialEncodings, WinEncodingsCleanup):
	add exit handler that resets the encoding information to a state
	where we can reuse Tcl.  Following these changes, it is possible
	to reuse Tcl (following Tcl_FindExecutable or Tcl_CreateInterp)
	following a Tcl_Finalize.

	* generic/tclIOUtil.c (TclFinalizeFilesystem): reset statics to
	their original values on finalize to allow reuse of the library.

2002-12-04  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinPipe.c: reverted back to -r1.27 due to numerous test
	failures that need to be resolved first.  The idea was good,
	but the details aren't.
	
2002-12-04  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinPipe.c (Tcl_WaitPid):  When a process exits with an
	exception, pass this notice on to the caller with a SIG* code
	rather than truncating the exit code and missing the meaning.
	This allows TclCleanupChildren() to report "CHILDKILLED".

	This has a different behavior than unix in that closing the
	read pipe to a process sends the SIGPIPE signal which is
	returned as a SIGPIPE exit status.  On windows, we send the
	process a CTRL_BREAK_EVENT and get back a CONTROL_C_EXIT which
	is documented to mean a SIGINT which seems wrong as a system,
	but is the correct exit status.

2002-12-04  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c: fix to redirected 'load' in virtual
	filesystem for some Unix systems.

	* generic/tclEvent.c: the filesystem must be cleaned up before
	the encoding subsystem because it needs access to encodings.
	Fixes crash on exit observed in embedded applications.

	* generic/tclTestObj.c: patch omitted from previous change
	of 2002-11-13
	
2002-12-03  Jeff Hobbs  <jeffh@ActiveState.com>
